Edit index, list countries

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ and is wrapped around the whole page content, except for the footer in this exam
         <!-- Blog entry -->
         <div class="w3-card-4 w3-margin w3-white">
           <div class="w3-container">
-            <h3> <img src="https://www.countryflagicons.com/FLAT/64/AF.png"><b>Afghanistan</b></h3>
-            <h5>The patience stone</h5>
+            <h3> <img src="https://www.countryflagicons.com/FLAT/64/AF.png"><b>    Afghanistan <h5>The patience stone</h5></b></h3>
+            
             <h7> <span class="w3-opacity">START: June 26, 2023</span></h7>
             <h7> <span class="w3-opacity">END: </span></h7>
           </div>
@@ -81,6 +81,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             </script>
           </div>
         </div>
+       
         <hr>
         <div class="w3-card w3-margin w3-margin-top">
           <div class="w3-container w3-white">
@@ -102,6 +103,27 @@ and is wrapped around the whole page content, except for the footer in this exam
               );
             </script>
           </div>
+        </div>
+        <hr>
+        <div class="w3-card w3-margin">
+          <div class="w3-container w3-padding">
+            <h4><b>NEXT BOOKS</b></h4>
+          </div>
+          <ul class="w3-ul w3-hoverable w3-white">
+            <li class="w3-padding-16">
+              <h3> <img src="https://www.countryflagicons.com/FLAT/64/AL.png"><b>    Albania</b></h3>
+            </li>
+            <li class="w3-padding-16">
+              <h3> <img src="https://www.countryflagicons.com/FLAT/64/DZ.png"><b>    Algeria</b></h3>
+            </li> 
+            <li class="w3-padding-16">
+              <h3> <img src="https://www.countryflagicons.com/FLAT/64/AN.png"><b>    Andorra</b></h3>
+            </li>   
+            <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+              <h3> <img src="https://www.countryflagicons.com/FLAT/64/AO.png"><b>    Angola</b></h3>
+
+            </li>  
+          </ul>
         </div>
 
         <hr>
