--- a/index.html
+++ b/index.html
@@ -5,16 +5,55 @@
 
 <head>
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-  <script id="entry-template" type="text/x-handlebars-template">
+
+
+  <script id="blog-entry-template" type="text/x-handlebars-template">
     {{#each book as |book|}}
-      <b><h3><img src="{{book.link}}"> {{book.country}} - <i> <a href="{{book.linkTitle}}" target="_blank">{{title}}</a></i></h3></b>
-    {{/each}}
+  <div class="w3-card-4 w3-margin w3-white">
+    
+    <div class="w3-container">
+      <img src="{{book.link}}">
+      <h3 style="display: inline-block" ><b>{{book.country}}</b></h3>
+      <h5 ><i><a href="{{book.linkTitle}}" target="_blank">{{title}}</a></i> </h5>
+   
+    <div class="w3-container">
+      <div class="w3-row">
+        <div class="w3-col m8 s12">
+          <p><span class="fa fa-star {{book.firststar}}"></span>
+            <span class="fa fa-star {{book.secondstar}}"></span>
+            <span class="fa fa-star {{book.thirdstar}}"></span>
+            <span class="fa fa-star {{book.fourthstar}}"></span>
+            <span class="fa fa-star {{book.fifthstar}}"></span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  {{/each}}
   </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>READ AROUND THE WORLD</title>
   <style>
     body,
@@ -24,6 +63,10 @@
     h4,
     h5 {
       font-family: "Raleway", sans-serif
+    }
+
+    .checked {
+      color: orange;
     }
   </style>
 </head>
@@ -45,17 +88,18 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 
     <div class="w3-row">
-      
+
       <!-- LEFT GRID -->
       <!-- Blog entries -->
       <div class="w3-col l8 s12">
         <!-- Blog entry -->
-        <div class="w3-card-4 w3-margin w3-white">
-          <div class="w3-container">
-            <div id="book-entry-two"></div>
-            <script src="read-books.js" type="text/javascript"></script>
-          </div>
-        </div>
+
+
+        <div id="book-entry-two"></div>
+        <script src="read-books.js" type="text/javascript"></script>
+
+
+
       </div>
       <!-- END LEFT GRID -->
 
