--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </div>
       </div>
       <h6><i><b>INES:</b></i> {{book.reviewInes}} </h6>
-      <h6><i><b>TERESA:</b></i> {{book.reviewTeresa}} </h6>
+      <h6><i><b>TERESA:</b></i> {{book.reviewTeresa}}
+      <b style="display: inline-block; color: rgb(67, 1, 1)">{{book.starsTeresa}}</b> </h6>
     
     </div>
 
