--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <head>
   
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  <script src="data/apis.js" type="text/javascript"></script> 
+  <script src="icons/icons.js" type="text/javascript"></script> 
+  <script src="data/countries.js" type="text/javascript"></script> 
+  <script src="data/reviews.js" type="text/javascript"></script> 
+  <script src="data/books.js" type="text/javascript"></script> 
 
   <!-- SCRIPT FOR REVIEWED BOOKS -->
   <script id="blog-entry-template-two" type="text/x-handlebars-template">
@@ -13,8 +18,8 @@
       <h3 class="w3-text-teal"><img src="icons/computer-kitty.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;REVIEWED</b></h3>
       <div class="w3-card-4 w3-white w3-padding">
         {{#each book as |book|}}
-          <h5 class="w3-right-align"><b>{{book.country}}&nbsp;&nbsp;</b><img src="{{book.link}}" style="width:10%"></h5>
-          <img src="{{book.imageBook}}" class="w3-left w3-margin-right" style="width:60px">
+          <h5 class="w3-right-align"><b>{{book.country}}&nbsp;&nbsp;</b><img src="{{book.flag}}" style="width:10%"></h5>
+          <img src="{{book.cover}}" class="w3-left w3-margin-right" style="width:60px">
           <p> <i><a href="{{book.linkTitle}}" target="_blank">{{title}}</a></i> by {{author}}</p>
           <p>
             <img src="{{book.firststar}}" style="width:7%">
@@ -47,7 +52,7 @@
       <div class="w3-card-4 w3-white w3-padding">  
         {{#each book as |book|}}
         <img src="{{book.imageBook}}" class="w3-left w3-margin-right" style="width:60px">
-        <p><img src="{{book.link}}" style="width:10%"><b>&nbsp;&nbsp;{{book.country}}</b></p>
+        <p><img src="{{book.flag}}" style="width:10%"><b>&nbsp;&nbsp;{{book.country}}</b></p>
         <p> <i><a href="{{book.linkTitle}}" target="_blank">{{title}}</a></i> by {{author}}</p>
           <hr>
         {{/each}}
@@ -63,8 +68,8 @@
       <h3 class="w3-text-teal"><img src="icons/kitty-book.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;CURRENT</b></h3>
       <div class="w3-card-4 w3-white w3-padding">  
         {{#each book as |book|}}
-          <img src="{{book.imageBook}}" class="w3-left w3-margin-right" style="width:60px">
-          <p><img src="{{book.link}}" style="width:10%"><b>&nbsp;&nbsp;{{book.country}}</b></p>
+          <img src="{{book.cover}}" class="w3-left w3-margin-right" style="width:60px">
+          <p><img src="{{book.flag}}" style="width:10%"><b>&nbsp;&nbsp;{{book.country}}</b></p>
           <p> <i> <a href="{{book.linkTitle}}" target="_blank">{{title}}</a></i> by {{author}}</p>
         {{/each}}
       </div>
@@ -166,8 +171,8 @@
                   <div class="w3-container">
                     <img id="cat-image" src=urlCat class="w3-left w3-margin-right" style="width:140px">
                     <p id="cat-fact"></p>
-                    <script type="text/javascript" src="cats-photos.js"></script>
-                    <script type="text/javascript" src="cats-facts.js"></script>
+                    <script type="text/javascript" src="cats/cats-photos.js"></script>
+                    <script type="text/javascript" src="cats/cats-facts.js"></script>
                   </div>
                 </div>
                      <!-- END FACTS CATS CARD -->
