--- a/around-world.html
+++ b/around-world.html
@@ -12,76 +12,12 @@
   <script src="data/reviews.js" type="text/javascript"></script>
   <script src="data/books.js" type="text/javascript"></script>
 
-  <script id="blog-entry-template-two" type="text/x-handlebars-template">
-    <div class="w3-card-4 w3-margin w3-padding w3-sand">
-      <h3 class="w3-text-teal"><img src="icons/computer-kitty.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;REVIEWED</b></h3>
-      <div class="w3-card-4 w3-white w3-padding">
-        {{#each book as |book|}}
-          <h5 class="w3-right-align"><b>{{book.country}}&nbsp;&nbsp;</b><img src="{{book.flag}}" style="width:10%"></h5>
-          <img src="{{book.cover}}" class="w3-left w3-margin-right" style="width:60px">
-          <p> <i><a href="{{book.linkTitle}}" target="_blank">{{title}}</a></i> by {{author}}</p>
-          <p>
-            <img src="{{book.firststar}}" style="width:7%">
-            <img src="{{book.secondstar}}" style="width:7%">
-            <img src="{{book.thirdstar}}" style="width:7%">
-            <img src="{{book.fourthstar}}" style="width:7%">
-            <img src="{{book.fifthstar}}" style="width:7%">
-          </p>
-          <div class="w3-dropdown-hover w3-white">
-          <p class="w3-text-teal w3-right-align"><i><b>Read Review</b></i>&nbsp;&nbsp;</p>
-            <div class="w3-dropdown-content w3-card-4" style="width:300%">
-              <div class="w3-container">
-                <h6> INES: {{book.reviewInes}}<b style="display: inline-block; color: rgb(148, 21, 120)">&nbsp;&nbsp;{{book.starsInes}}</b> </h6>
-                <h6> TERESA: {{book.reviewTeresa}}<b style="display: inline-block; color: rgb(148, 21, 120)">&nbsp;&nbsp;{{book.starsInes}}</b> </h6>
-              </div>
-            </div>
-          </div>
-          <hr>
-        {{/each}}
-      </div>
-      <br>
-    </div> 
-  </script>
-  <!-- SCRIPT FOR REVIEWED BOOKS -->
-
-  <!-- SCRIPT FOR FUTURE BOOKS -->
-  <script id="blog-entry-template-one" type="text/x-handlebars-template">
-    <div class="w3-card-4 w3-margin w3-padding w3-sand">
-      <h3 class="w3-text-teal"><img src="icons/kitty-coffee.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;PLANNED READING</b></h3>
-      <div class="w3-card-4 w3-white w3-padding">  
-        {{#each book as |book|}}
-        <img src="{{book.imageBook}}" class="w3-left w3-margin-right" style="width:60px">
-        <p><img src="{{book.flag}}" style="width:10%"><b>&nbsp;&nbsp;{{book.country}}</b></p>
-        <p> <i><a href="{{book.linkTitle}}" target="_blank">{{title}}</a></i> by {{author}}</p>
-          <hr>
-        {{/each}}
-      </div>
-      <br>
-    </div> 
-  </script>
-  <!-- SCRIPT FOR FUTURE BOOKS -->
-
-  <!-- SCRIPT FOR CURRENT BOOKS -->
-  <script id="blog-entry-template-three" type="text/x-handlebars-template">
-    <div class="w3-card-4 w3-margin w3-padding w3-sand">
-      <h3 class="w3-text-teal"><img src="icons/kitty-book.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;CURRENT</b></h3>
-      <div class="w3-card-4 w3-white w3-padding">  
-        {{#each book as |book|}}
-          <img src="{{book.cover}}" class="w3-left w3-margin-right" style="width:60px">
-          <p><img src="{{book.flag}}" style="width:10%"><b>&nbsp;&nbsp;{{book.country}}</b></p>
-          <p> <i> <a href="{{book.linkTitle}}" target="_blank">{{title}}</a></i> by {{author}}</p>
-        {{/each}}
-      </div>
-      <br>
-    </div> 
-  </script>
-  <!-- SCRIPT FOR CURRENT BOOKS -->
-
   <!-- SCRIPT FOR ABANDONED BOOK -->
   <script id="blog-entry-template-four" type="text/x-handlebars-template">
-    <div class="w3-card-4 w3-margin w3-padding w3-sand">
-      <h3 class="w3-text-teal"><img src="icons/talk-paw.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;ABANDONED</b></h3>
-      <div class="w3-card-4 w3-white">
+    <div class="w3-card-4 w3-margin w3-padding around-world-theme-01">
+      <h3 class="around-world-theme-01"><img src="icons/talk-paw.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;ABANDONED</b></h3>
+    </div> 
+      <div class="w3-card-4 w3-white w3-margin w3-padding">
         {{#each book as |book|}}
         <header class="w3-container w3-right-align">
           <h5><b>{{book.country}}&nbsp;&nbsp;</b><img src="{{book.link}}" style="width:10%"></h5>
@@ -94,8 +30,6 @@
           <br>
         {{/each}}
       </div>
-      <br>
-    </div> 
   </script>
   <!-- END SCRIPT FOR ABANDONED BOOK -->
 
@@ -106,6 +40,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="around-world.css">
 
   <title>READ AROUND THE WORLD</title>
 
@@ -113,7 +48,7 @@
 
 <!-- END HEAD -->
 
-<body class="w3-light-grey">
+<body class="w3-white">
 
   <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
     <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
@@ -124,17 +59,17 @@
 
   <div id="main">
     <div>
-      <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+      <button id="openNav" class="w3-button around-world-theme-02 w3-xlarge" onclick="w3_open()">&#9776;</button>
       <script src="menu.js" type="text/javascript"></script>
     </div>
 
-  <!-- Header -->
-  <header class="w3-container w3-center w3-padding-32">
-    <h1 class="w3-text-teal"><b>READ AROUND THE WORLD</b></h1>
-    <p>Inspired by <i><a href="https://ayearofreadingtheworld.com/thelist/" target="_blank">A year of reading the
-          world</a></i></p>
-  </header>
-  <!-- End Header -->
+    <!-- Header -->
+    <header class="w3-container w3-center w3-padding-32">
+      <h1 class="grey-cells-text-01"><b>READ AROUND THE WORLD</b></h1>
+      <p class="grey-cells-text-02">Inspired by <i><a href="https://ayearofreadingtheworld.com/thelist/" target="_blank">A year of reading the
+            world</a></i></p>
+    </header>
+    <!-- End Header -->
 
   </div>
 
@@ -142,6 +77,10 @@
     <div class="w3-row">
       <!-- LEFT GRID -->
       <div class="w3-col l4 s12">
+        <div class="w3-card-4 w3-margin w3-padding around-world-theme-01">
+          <h3><img src="icons/computer-kitty.png"
+              style="width:10%; height:10%"><b>&nbsp;&nbsp;REVIEWED</b></h3>
+        </div>
         <div id="book-entry-two"></div>
         <script src="done-books.js" type="text/javascript"></script>
         <!-- ABANDONED BOOK -->
@@ -150,18 +89,15 @@
         <!-- END ABANDONED BOOK -->
       </div>
 
-
-
-
-
-
       <!-- END LEFT GRID -->
-
-
 
       <!-- MIDDLE GRID -->
       <div class="w3-col l4">
         <!-- CURRENT BOOK -->
+        <div class="w3-card-4 w3-margin w3-padding around-world-theme-01">
+          <h3><img src="icons/kitty-book.png"
+              style="width:10%; height:10%"><b>&nbsp;&nbsp;CURRENT</b></h3>
+        </div>
         <div id="book-entry-three"></div>
         <script src="read-books.js" type="text/javascript"></script>
         <!-- END CURRENT BOOK -->
@@ -180,20 +116,23 @@
       <!-- END MIDDLE GRID -->
       <!-- RIGHT GRID -->
       <div class="w3-col l4">
-
-
+        <div class="w3-card-4 w3-margin w3-padding around-world-theme-01">
+          <h3>
+            <img src="icons/kitty-coffee.png" style="width:10%; height:10%">
+            <b>&nbsp;&nbsp;PLANNED READING</b>
+          </h3>
+        </div>
         <div id="book-entry-one"></div>
         <script src="future-books.js" type="text/javascript"></script>
-
-
         <!-- END RIGHT GRID -->
         <br>
       </div>
     </div>
 
     <!-- Footer -->
-    <footer class="w3-container w3-teal w3-padding-32 w3-margin-top">
-      <p>Made by Teresa using <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">W3.CSS TUTORIAL.</a>
+    <footer class="w3-container around-world-theme-01 w3-padding-32 w3-margin-top">
+      <p>Made by Teresa using <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">W3.CSS
+          TUTORIAL.</a>
       </p>
       <p>Cat Icons from <a href="https://www.flaticon.com/free-icons/cat" title="cat icons">Freepik - Flaticon</a></p>
     </footer>
