changed design, add icons, add images

--- a/around-world.html
+++ b/around-world.html
@@ -65,8 +65,8 @@
 
     <!-- Header -->
     <header class="w3-container w3-center w3-padding-32">
-      <h1 class="grey-cells-text-01"><b>READ AROUND THE WORLD</b></h1>
-      <p class="grey-cells-text-02">Inspired by <i><a href="https://ayearofreadingtheworld.com/thelist/" target="_blank">A year of reading the
+      <h1 class="around-world-text-01"><img src="icons/ecology-book.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;READ AROUND THE WORLD</b></h1>
+      <p class="around-world-text-02">Inspired by <i><a href="https://ayearofreadingtheworld.com/thelist/" target="_blank">A year of reading the
             world</a></i></p>
     </header>
     <!-- End Header -->
@@ -134,7 +134,9 @@
       <p>Made by Teresa using <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">W3.CSS
           TUTORIAL.</a>
       </p>
-      <p>Cat Icons from <a href="https://www.flaticon.com/free-icons/cat" title="cat icons">Freepik - Flaticon</a></p>
+      <p>Cat icons created by <a href="https://www.flaticon.com/free-icons/cat" title="cat icons">Freepik - Flaticon</a></p>
+      <p>Geography icons created by<a href="https://www.flaticon.com/free-icons/geography" title="geography icons"> BZZRINCANTATION - Flaticon</a></p>
+    
     </footer>
 
 </body>
