--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="w3-light-grey">
 
-    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+     <!--<div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
         <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="around-world.html" class="w3-bar-item w3-button">Read Around The World</a>
@@ -42,7 +42,7 @@
         <div>
             <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
             <script src="menu.js" type="text/javascript"></script>
-        </div>
+        </div> -->
 
         <!-- Header -->
         <header class="w3-container w3-center w3-padding-32">
@@ -55,27 +55,25 @@
 
 
     <div class="w3-content w3-display-container" style="max-width:800px">
-        <img class="mySlides" src="close-up-opened-book-library.jpg" style="width:100%">
-        <img class="mySlides" src="close-up-opened-book-library.jpg" style="width:100%">
-        <img class="mySlides" src="close-up-opened-book-library.jpg" style="width:100%">
-        <div class="w3-center w3-container w3-section w3-large w3-text-sand w3-display-bottommiddle" style="width:100%">
+      <a href="around-world.html"><img class="mySlides" src="images/read-around-world.png" style="width:100%"></a>
+      <a href="hercule-poirot.html"><img class="mySlides" src="images/little-grey-cells.png" style="width:100%"></a>
+        <div class="w3-center w3-container w3-section w3-large w3-text-teal w3-display-bottommiddle" style="width:100%">
             <div class="w3-left w3-hover-text-teal" onclick="plusDivs(-1)">&#10094;</div>
             <div class="w3-right w3-hover-text-teal" onclick="plusDivs(1)">&#10095;</div>
             <span class="w3-badge demo w3-border w3-sand w3-hover-teal" onclick="currentDiv(1)"></span>
             <span class="w3-badge demo w3-border w3-sand w3-hover-teal" onclick="currentDiv(2)"></span>
-            <span class="w3-badge demo w3-border w3-sand w3-hover-teal" onclick="currentDiv(3)"></span>
         </div>
     </div>
 
 
 
 
-    <!-- Footer -->
+    <!-- Footer 
     <footer class="w3-container w3-teal w3-padding-32 w3-margin-top">
         <p>Made by Teresa using <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">W3.CSS
                 TUTORIAL.</a></p>
         <p>Cat Icons from <a href="https://www.flaticon.com/free-icons/cat" title="cat icons">Freepik - Flaticon</a></p>
-    </footer>
+    </footer>-->
 
 </body>
 
