--- a/hercule-poirot.html
+++ b/hercule-poirot.html
@@ -66,8 +66,8 @@
 
         <!-- Header -->
         <header class="w3-container w3-center w3-padding-32">
-            <h1 class="grey-cells-text-01"><b>THE LITTLE GREY CELLS</b></h1>
-            <p class="grey-cells-text-02">The Misteries of Hercule Poirot, order based on
+            <h1 class="grey-cells-text-01"><img src="icons/poirot.png" style="width:10%; height:10%"><b>&nbsp;&nbsp;THE LITTLE GREY CELLS</b></h1>
+            <p class="grey-cells-text-02">Inspired by
                 <i><a href=" https://www.bookseriesinorder.com/agatha-christie/" target="_blank">Book Series In
                         Order</a></i>
             </p>
